--- a/index.html
+++ b/index.html
@@ -7,46 +7,43 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="css/custom-style.css">
 </head>
-<body background="images/background-image.jpg">
+<body background="images/others/background-image.jpg">
 <div id="title">It's Time To Play Chess</div>
-<div class="row">
-    <div class="col-xs-3">
+<div class="row container-fluid main-div">
+    <div class="col-xs-2">
+        <div class="team-name">Team White</div>
         <table class="score-table" align="center">
             <tr>
-                <td id="cr1" class="div-cross"></td>
-                <td id="cr2" class="div-cross"></td>
+                <td id="cr17" class="div-cross"></td>
+                <td id="cr18" class="div-cross"></td>
+                <td id="cr19" class="div-cross"></td>
             </tr>
             <tr>
-                <td id="cr3" class="div-cross"></td>
-                <td id="cr4" class="div-cross"></td>
+                <td id="cr20" class="div-cross"></td>
+                <td id="cr21" class="div-cross"></td>
+                <td id="cr22" class="div-cross"></td>
             </tr>
             <tr>
-                <td id="cr5" class="div-cross"></td>
-                <td id="cr6" class="div-cross"></td>
+                <td id="cr23" class="div-cross"></td>
+                <td id="cr24" class="div-cross"></td>
+                <td id="cr25" class="div-cross"></td>
             </tr>
             <tr>
-                <td id="cr7" class="div-cross"></td>
-                <td id="cr8" class="div-cross"></td>
+                <td id="cr26" class="div-cross"></td>
+                <td id="cr27" class="div-cross"></td>
+                <td id="cr28" class="div-cross"></td>
             </tr>
             <tr>
-                <td id="cr9" class="div-cross"></td>
-                <td id="cr10" class="div-cross"></td>
+                <td id="cr29" class="div-cross"></td>
+                <td id="cr30" class="div-cross"></td>
+                <td id="cr31" class="div-cross"></td>
             </tr>
-            <tr>
-                <td id="cr11" class="div-cross"></td>
-                <td id="cr12" class="div-cross"></td>
-            </tr>
-            <tr>
-                <td id="cr13" class="div-cross"></td>
-                <td id="cr14" class="div-cross"></td>
-            </tr>
-            <tr>
-                <td id="cr15" class="div-cross"></td>
-                <td id="cr16" class="div-cross"></td>
-            </tr>
+            <tr> <td id="cr32" class="div-cross"></td>
+                <td class="div-cross"></td>
+                <td class="div-cross"></td></tr>
         </table>
     </div>
-    <div class="col-xs-6">
+    <div class="col-xs-8">
         <table id="board" align="center">
             <tr>
                 <td>
@@ -406,43 +403,45 @@
             </tr>
         </table>
     </div>
-    <div class="col-xs-3">
+    <div class="col-xs-2">
+        <div class="team-name">Team Black</div>
         <table class="score-table" align="center">
             <tr>
-                <td id="cr17" class="div-cross"></td>
-                <td id="cr18" class="div-cross"></td>
+                <td id="cr1" class="div-cross"></td>
+                <td id="cr2" class="div-cross"></td>
+                <td id="cr3" class="div-cross"></td>
             </tr>
             <tr>
-                <td id="cr19" class="div-cross"></td>
-                <td id="cr20" class="div-cross"></td>
+                <td id="cr4" class="div-cross"></td>
+                <td id="cr5" class="div-cross"></td>
+                <td id="cr6" class="div-cross"></td>
             </tr>
             <tr>
-                <td id="cr21" class="div-cross"></td>
-                <td id="cr22" class="div-cross"></td>
+                <td id="cr7" class="div-cross"></td>
+                <td id="cr8" class="div-cross"></td>
+                <td id="cr9" class="div-cross"></td>
             </tr>
             <tr>
-                <td id="cr23" class="div-cross"></td>
-                <td id="cr24" class="div-cross"></td>
+                <td id="cr10" class="div-cross"></td>
+                <td id="cr11" class="div-cross"></td>
+                <td id="cr12" class="div-cross"></td>
             </tr>
             <tr>
-                <td id="cr25" class="div-cross"></td>
-                <td id="cr26" class="div-cross"></td>
+                <td id="cr13" class="div-cross"></td>
+                <td id="cr14" class="div-cross"></td>
+                <td id="cr15" class="div-cross"></td>
             </tr>
-            <tr>
-                <td id="cr27" class="div-cross"></td>
-                <td id="cr28" class="div-cross"></td>
-            </tr>
-            <tr>
-                <td id="cr29" class="div-cross"></td>
-                <td id="cr30" class="div-cross"></td>
-            </tr>
-            <tr>
-                <td id="cr31" class="div-cross"></td>
-                <td id="cr32" class="div-cross"></td>
+            <tr> <td id="cr16" class="div-cross"></td>
+                <td class="div-cross"></td>
+                <td class="div-cross"></td>
             </tr>
         </table>
     </div>
 </div>
+<footer id="footer">
+    <div id="footer-text">This Chess Game is Developed by Kushan Dhananjala</div>
+    <img src="images/others/ijse.png" id="footer-image">
+</footer>
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/jquery-ui.min.js"></script>
 <script src="js/home-controller.js"></script>
