Chess Game By DK

--- a/index.html
+++ b/index.html
@@ -11,41 +11,44 @@
 <div id="title">It's Time To Play Chess</div>
 <div class="row container-fluid main-div">
     <div class="col-xs-2">
-        <div class="team-name">Team White</div>
-        <table class="score-table" align="center">
+        <div class="team-name">Score Of White</div>
+        <table class="score-table table-responsive" align="center">
             <tr>
-                <td id="cr17" class="div-cross"></td>
-                <td id="cr18" class="div-cross"></td>
-                <td id="cr19" class="div-cross"></td>
+                <td id="cross17" class="div-cross"></td>
+                <td id="cross18" class="div-cross"></td>
+                <td id="cross19" class="div-cross"></td>
             </tr>
             <tr>
-                <td id="cr20" class="div-cross"></td>
-                <td id="cr21" class="div-cross"></td>
-                <td id="cr22" class="div-cross"></td>
+                <td id="cross20" class="div-cross"></td>
+                <td id="cross21" class="div-cross"></td>
+                <td id="cross22" class="div-cross"></td>
             </tr>
             <tr>
-                <td id="cr23" class="div-cross"></td>
-                <td id="cr24" class="div-cross"></td>
-                <td id="cr25" class="div-cross"></td>
+                <td id="cross23" class="div-cross"></td>
+                <td id="cross24" class="div-cross"></td>
+                <td id="cross25" class="div-cross"></td>
             </tr>
             <tr>
-                <td id="cr26" class="div-cross"></td>
-                <td id="cr27" class="div-cross"></td>
-                <td id="cr28" class="div-cross"></td>
+                <td id="cross26" class="div-cross"></td>
+                <td id="cross27" class="div-cross"></td>
+                <td id="cross28" class="div-cross"></td>
             </tr>
             <tr>
-                <td id="cr29" class="div-cross"></td>
-                <td id="cr30" class="div-cross"></td>
-                <td id="cr31" class="div-cross"></td>
+                <td id="cross29" class="div-cross"></td>
+                <td id="cross30" class="div-cross"></td>
+                <td id="cross31" class="div-cross"></td>
             </tr>
-            <tr> <td id="cr32" class="div-cross"></td>
+            <tr> <td id="cross32" class="div-cross"></td>
                 <td class="div-cross"></td>
                 <td class="div-cross"></td></tr>
         </table>
     </div>
     <div class="col-xs-8">
-        <table id="board" align="center">
+        <table id="board" class="table-responsive" align="center">
             <tr>
+                <td>
+                    <div class="coner-div"></div>
+                </td>
                 <td>
                     <div class="div-letter"><span>A</span></div>
                 </td>
@@ -70,8 +73,14 @@
                 <td>
                     <div class="div-letter"><span>H</span></div>
                 </td>
+                <td>
+                    <div class="coner-div"></div>
+                </td>
             </tr>
             <tr>
+                <td>
+                    <div class="div-number">8</div>
+                </td>
                 <td>
                     <div class="white-box element" id="a8">
                         <div class="rook chessPiece" id="b-l-r" alt="chessman"><img src="images/pieces/black-rook.png"
@@ -120,8 +129,14 @@
                                                                                     class="img-responsive"></div>
                     </div>
                 </td>
+                <td>
+                    <div class="div-number">8</div>
+                </td>
             </tr>
             <tr>
+                <td>
+                    <div class="div-number"><span>7</span></div>
+                </td>
                 <td>
                     <div class="black-box element" id="a7">
                         <div class="pown chessPiece blackpawn" id="b-1-p" alt="chessman"><img
@@ -170,8 +185,14 @@
                                 src="images/pieces/black-pone.png" class="img-responsive"></div>
                     </div>
                 </td>
+                <td>
+                    <div class="div-number"><span>7</span></div>
+                </td>
             </tr>
             <tr>
+                <td>
+                    <div class="div-number"><span>6</span></div>
+                </td>
                 <td>
                     <div class="white-box element" id="a6"></div>
                 </td>
@@ -196,8 +217,14 @@
                 <td>
                     <div class="black-box element" id="h6"></div>
                 </td>
+                <td>
+                    <div class="div-number"><span>6</span></div>
+                </td>
             </tr>
             <tr>
+                <td>
+                    <div class="div-number"><span>5</span></div>
+                </td>
                 <td>
                     <div class="black-box element" id="a5"></div>
                 </td>
@@ -222,8 +249,14 @@
                 <td>
                     <div class="white-box element" id="h5"></div>
                 </td>
+                <td>
+                    <div class="div-number"><span>5</span></div>
+                </td>
             </tr>
             <tr>
+                <td>
+                    <div class="div-number"><span>4</span></div>
+                </td>
                 <td>
                     <div class="white-box element" id="a4"></div>
                 </td>
@@ -248,8 +281,14 @@
                 <td>
                     <div class="black-box element" id="h4"></div>
                 </td>
+                <td>
+                    <div class="div-number"><span>4</span></div>
+                </td>
             </tr>
             <tr>
+                <td>
+                    <div class="div-number"><span>3</span></div>
+                </td>
                 <td>
                     <div class="black-box element" id="a3"></div>
                 </td>
@@ -274,8 +313,14 @@
                 <td>
                     <div class="white-box element" id="h3"></div>
                 </td>
+                <td>
+                    <div class="div-number"><span>3</span></div>
+                </td>
             </tr>
             <tr>
+                <td>
+                    <div class="div-number"><span>2</span></div>
+                </td>
                 <td>
                     <div class="white-box element" id="a2">
                         <div class="pown chessPiece whitepawn" id="w-1-p" alt="chessman"><img
@@ -324,8 +369,14 @@
                                 src="images/pieces/white-pone.png" class="img-responsive"></div>
                     </div>
                 </td>
+                <td>
+                    <div class="div-number"><span>2</span></div>
+                </td>
             </tr>
             <tr>
+                <td>
+                    <div class="div-number"><span>1</span></div>
+                </td>
                 <td>
                     <div class="black-box element" id="a1">
                         <div class="rook chessPiece" id="w-l-r" alt="chessman"><img src="images/pieces/white-rook.png"
@@ -374,8 +425,14 @@
                                                                                     class="img-responsive"></div>
                     </div>
                 </td>
+                <td>
+                    <div class="div-number"><span>1</span></div>
+                </td>
             </tr>
             <tr>
+                <td>
+                    <div class="coner-div"></div>
+                </td>
                 <td>
                     <div class="div-letter"><span>A</span></div>
                 </td>
@@ -400,38 +457,41 @@
                 <td>
                     <div class="div-letter"><span>H</span></div>
                 </td>
+                <td>
+                    <div class=" coner-div"></div>
+                </td>
             </tr>
         </table>
     </div>
     <div class="col-xs-2">
-        <div class="team-name">Team Black</div>
-        <table class="score-table" align="center">
+        <div class="team-name">Score Of Black</div>
+        <table class="score-table table-responsive" align="center">
             <tr>
-                <td id="cr1" class="div-cross"></td>
-                <td id="cr2" class="div-cross"></td>
-                <td id="cr3" class="div-cross"></td>
+                <td id="cross1" class="div-cross"></td>
+                <td id="cross2" class="div-cross"></td>
+                <td id="cross3" class="div-cross"></td>
             </tr>
             <tr>
-                <td id="cr4" class="div-cross"></td>
-                <td id="cr5" class="div-cross"></td>
-                <td id="cr6" class="div-cross"></td>
+                <td id="cross4" class="div-cross"></td>
+                <td id="cross5" class="div-cross"></td>
+                <td id="cross6" class="div-cross"></td>
             </tr>
             <tr>
-                <td id="cr7" class="div-cross"></td>
-                <td id="cr8" class="div-cross"></td>
-                <td id="cr9" class="div-cross"></td>
+                <td id="cross7" class="div-cross"></td>
+                <td id="cross8" class="div-cross"></td>
+                <td id="cross9" class="div-cross"></td>
             </tr>
             <tr>
-                <td id="cr10" class="div-cross"></td>
-                <td id="cr11" class="div-cross"></td>
-                <td id="cr12" class="div-cross"></td>
+                <td id="cross10" class="div-cross"></td>
+                <td id="cross11" class="div-cross"></td>
+                <td id="cross12" class="div-cross"></td>
             </tr>
             <tr>
-                <td id="cr13" class="div-cross"></td>
-                <td id="cr14" class="div-cross"></td>
-                <td id="cr15" class="div-cross"></td>
+                <td id="cross13" class="div-cross"></td>
+                <td id="cross14" class="div-cross"></td>
+                <td id="cross15" class="div-cross"></td>
             </tr>
-            <tr> <td id="cr16" class="div-cross"></td>
+            <tr> <td id="cross16" class="div-cross"></td>
                 <td class="div-cross"></td>
                 <td class="div-cross"></td>
             </tr>
@@ -443,6 +503,8 @@
     <img src="images/others/ijse.png" id="footer-image">
 </footer>
 <script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/bootstrap.js"></script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/jquery-ui.min.js"></script>
 <script src="js/home-controller.js"></script>
 </body>
