Chess Game By DK

--- a/index.html
+++ b/index.html
@@ -500,6 +500,7 @@
 </div>
 <footer id="footer">
     <div id="footer-text">This Chess Game is Developed by Kushan Dhananjala</div>
+    <div id="footer-copyright">Copyright @ 2017 - www.checkmatedk.tk</div>
     <img src="images/others/ijse.png" id="footer-image">
 </footer>
 <script type="text/javascript" src="js/jquery.js"></script>
