Chess Game Final

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" type="text/css" href="css/custom-style.css">
 </head>
 <body background="images/others/background-image.jpg">
+<audio id="drag-audio">
+    <source src="audio/drag.mp3">
+</audio>
+<audio id="cross-audio">
+    <source src="audio/cross.mp3">
+</audio>
+
 <div id="title">It's Time To Play Chess</div>
 <div class="row container-fluid main-div">
     <div class="col-xs-2">
